<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_home" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/retailerFragment"
            android:icon="@drawable/ic_retailers"
            android:title="@string/menu_retailers" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/ic_branches"
            android:title="@string/menu_branch" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_product" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />

    </group>
</menu>